public/resources/loadingTransition.css
.fadeToNone {
    animation: fadeToNone;
    animation-duration: 4s;
    animation-fill-mode: forwards;
}

@keyframes fadeToNone {
    from { opacity: 1; }
    to { opacity: 0; }
}

.fadeSkipButton {
    animation: fadeSkipButton;
    animation-duration: 4s;
    animation-fill-mode: forwards;
}

@keyframes fadeSkipButton {
    from { opacity: .3; }
    to { opacity: 0; }
}

/* Fade in homepage elements */
.stars, .twinkling, .footer, .page-header {
    animation: fadeInSky;
    animation-duration: 2s;
}

.stars, .twinkling {
    position:absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
    width:100%;
    height:100%;
    display:block;
}

.stars {
    background:#000 url("stars.png") repeat top center;
    z-index: 0;
}

.twinkling{
    background:transparent url("twinkling.png") repeat top center;
    z-index: 1;
    animation:move-twink-back 200s linear infinite;
}

footer {
    background: white;
    width: 100%;
    height: fit-content;
    position: fixed;
    bottom: 0;
    z-index: 3;
    text-align:center;
} 

.page-header {
    background: white;
    width: 100%;
    height: fit-content;
    position:fixed;
    top: 0;
    z-index: 3;
}

.page-header a, footer a {
    text-decoration: none;
    padding-left: 3vh;
    padding-right: 3vh;
}

.page-header img, footer img {
    vertical-align: middle;
    display: inline;
    width: 5vh;
    height: 5vh;
}

#IY-Logo {
    padding-left: 10px;
    vertical-align: middle;
    display: inline;
    font-family: "Ink Free";
    text-decoration: none;
    color: black;
}

.logo-container {
    width:fit-content;
    height: fit-content;
}

.logo-container:hover {
    border-radius: 10px;
    animation: logo-container-change;
    animation-duration: 1s;
    animation-fill-mode: forwards;
    animation-direction: alternate;
}

@keyframes logo-container-change {
    from {}
    to { box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.8); }
}

#Gmail-Logo:hover {
    filter: invert(12%) sepia(86%) saturate(6865%) hue-rotate(3deg) brightness(105%) contrast(118%);
}

#Github-Logo:hover {
    filter: invert(70%) sepia(63%) saturate(6243%) hue-rotate(86deg) brightness(128%) contrast(112%);
}

#LinkedIn-Logo:hover {
    filter: invert(34%) sepia(92%) saturate(459%) hue-rotate(172deg) brightness(91%) contrast(97%);
}

@keyframes move-twink-back {
    from {background-position:0 0;}
    to {background-position:-10000px 5000px;}
}

@keyframes move-clouds-back {
    from {background-position:0 0;}
    to {background-position:10000px 0;}
}

@keyframes fadeInSky {
    from { opacity: 0; }
    to { opacity: 1; }
}

.grid-container {
    width: 100%;
    position: relative;
    z-index: 100;
}

.grid {
    position:relative;
    z-index: 2;
    grid-row-gap: 24px;

    margin-top: 10vh;  
    padding-bottom: 0;
    display: grid;
}

div section {
    width:fit-content;
    min-width: 661px;
    margin: auto;
    display: flex;
    flex-direction: row;
    column-gap: 24px;
}

.about-me-card, .skills-interests-card, .projects-ideas-card {
    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.1);
    transition: 0.3s;
}

.about-me-card:hover, .skills-interests-card:hover, .projects-ideas-card:hover {
    box-shadow: 0 0 10px 0 rgba(255, 255, 255, .6);
}

.about-me-card {
    border-radius: 10px;
    background: rgb(0,64,106);
    background: linear-gradient(31deg, rgba(0,64,106,1) 0%, rgba(0,181,157,1) 100%);

    height: 200px;
}

.about-me-card p header {
    padding-top: 30px;
    padding-left: 20px;
    color: #00dec0;
    font-size: 8vh;
    font-weight: 700;
    font-family: sans-serif;
}

.about-me-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 4vh;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

.about-me-card img {
    background: rgba(255,255,255, 0);
    overflow: hidden;

    height: -webkit-fill-available;
}

.projects-ideas-card {
    border-radius: 10px;
    background: rgb(0,64,106);
    background: linear-gradient(31deg, rgb(171, 221, 255) 0%, rgb(115, 116, 115) 100%);

    width: fit-content;

    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
    transition: 0.3s;

    padding-left: 20px;
    padding-right: 20px;
}

.projects-ideas-card p header {
    padding-top: 30px;
    font-size: 6vh;
    font-weight: 700;
    font-family: sans-serif;
}

.projects-ideas-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 4vh;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

.skills-interests-card {
    border-radius: 10px;
    background: rgb(252, 254, 255);
    background: linear-gradient(31deg, rgb(0, 255, 21) 0%, rgb(255, 217, 0) 100%);

    width: fit-content;

    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
    transition: 0.3s;

    padding-left: 20px;
    padding-right: 20px;
}

.skills-interests-card p header {
    padding-top: 30px;
    font-size: 6vh;
    font-weight: 700;
    font-family: sans-serif;
}

.skills-interests-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 4vh;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

